change most string to custom settings

--- a/src/classes/AS_GoogleAuthProvider.cls
+++ b/src/classes/AS_GoogleAuthProvider.cls
@@ -3,7 +3,7 @@ global class AS_GoogleAuthProvider implements Auth.RegistrationHandler {
     global User createUser(Id portalId, Auth.UserData data) {
 
         if (data.attributeMap.containsKey('sfdc_networkid')) {
-            Account account = [SELECT Id FROM account WHERE name = 'Community users'];
+            Account account = [SELECT Id FROM account WHERE name = :AS_Utils.authSetting().accountName__c];
             Contact contact = new Contact();
             contact.accountId = account.Id;
             contact.email = data.email;
@@ -28,25 +28,18 @@ global class AS_GoogleAuthProvider implements Auth.RegistrationHandler {
         update(user);
     }
 
-
-
-
-
-
-
-
     private User createUser(Auth.UserData data, Contact contact, Boolean isCommunity) {
         User user = new User();
         Profile profile;
         String alias;
         if (isCommunity) {
-            profile = [SELECT Id FROM profile WHERE name = 'Customer Community User'];
-            user.username = data.email + '.britenet';
+            profile = [SELECT Id FROM profile WHERE name = :AS_Utils.authSetting().userCommunityProfile__c];
+            user.username = data.email + AS_Utils.authSetting().communityUsernameSuffix__c;
             user.contactId = contact.Id;
             alias = data.firstName + data.lastName;
         } else {
-            profile = [SELECT Id FROM profile WHERE name = 'Standard User'];
-            user.username = data.username + '@myorg.com';
+            profile = [SELECT Id FROM profile WHERE name = :AS_Utils.authSetting().standardUserProfile__c];
+            user.username = data.username + AS_Utils.authSetting().standardUsernameSuffix__c;
             alias = data.username;
         }
         user.email = data.email;
@@ -56,7 +49,7 @@ global class AS_GoogleAuthProvider implements Auth.RegistrationHandler {
         user.languagelocalekey = UserInfo.getLanguage();
         user.localesidkey = UserInfo.getLocale();
         user.emailEncodingKey = 'UTF-8';
-        user.timeZoneSidKey = 'America/Los_Angeles';
+        user.timeZoneSidKey = AS_Utils.authSetting().timeZoneSidKey__c;
         user.profileId = profile.Id;
         return user;
     }
