workin search engine, before pagination

--- a/src/classes/AS_Community_SearchEngineController.cls
+++ b/src/classes/AS_Community_SearchEngineController.cls
@@ -1,10 +1,14 @@
 public with sharing class AS_Community_SearchEngineController {
 
     @AuraEnabled
-    public static List<Product2> searchProducts(String inpTxt) {
-       List<Product2> products = new List<Product2>();
+    public static List<AS_Community_Service.ProductInfoWrapper> searchProducts(String inpTxt) {
+        System.debug('INPUT TEXT: ');
+        System.debug(inpTxt);
+       List<AS_Community_Service.ProductInfoWrapper> products = new List<AS_Community_Service.ProductInfoWrapper>();
         Product2 product = new Product2(Name=inpTxt);
-       products = AS_Community_Service.getProducts(product);
+       products = AS_Community_Service.productInfoWrappers(product);
+        System.debug('PRODUCTS');
+        System.debug(products);
        return products;
     }
 
