--- a/src/classes/AS_ProductViewController.cls
+++ b/src/classes/AS_ProductViewController.cls
@@ -6,4 +6,10 @@ public with sharing class AS_ProductViewController {
     public static List<AS_Community_Service.documentContentWrapper> getProductPictures(String productId) {
         return AS_Community_Service.getProductPictures(productId);
     }
+
+    @auraEnabled
+    public static String getProductPrice_apex(String productId) {
+        System.debug('WCHODZ IDO APEX CONTROLLER');
+        return AS_Community_Service.getProductPrice(productId);
+    }
 }
