--- a/src/classes/AS_QueryBuilder.cls
+++ b/src/classes/AS_QueryBuilder.cls
@@ -249,4 +249,18 @@ public with sharing class AS_QueryBuilder {
     }
 
 
+    public void readyQuery_PricebookEntry_standardPB_returnIfFieldsContainPhrase_andIsActive(List<String> selectedFields, String fromObj, String phrase, List<String> where_fields, String andOr) {
+
+        clearQuery();
+        selectedFields(selectedFields);
+        fromObj(fromObj);
+        if (phrase != null) {
+            addWHERE();
+            ownCondition(' IsActive = true ');
+            ownCondition(' AND Pricebook2.Name LIKE \'Standard Price Book\' AND ');
+            query += ' ( ';
+            void_whereCondition_returnIf_FieldsContainPhrase(phrase, where_fields, andOr);
+            query += ' ) ';
+        }
+    }
 }
