--- a/src/classes/AS_Community_SearchEngineController.cls
+++ b/src/classes/AS_Community_SearchEngineController.cls
@@ -1,13 +1,10 @@
 public with sharing class AS_Community_SearchEngineController {
 
     @AuraEnabled
-    public static List<AS_Community_Service.ProductInfoWrapper> getNextPageOffset(String inpTxt,Integer offset) {
-
-        System.debug('PHRASE:');
-        System.debug(inpTxt);
-        return AS_Community_Service.productInfoWrappers(inpTxt,3,offset);
+    public static List<AS_Community_Service.ProductInfoWrapper> getNextPageOffset(String inpTxt, Integer offset) {
+        Integer queryLimit = Integer.valueOf(System.Label.AS_Community_SearchLimit);
+        return AS_Community_Service.productInfoWrappers(inpTxt, queryLimit, offset);
     }
-
 
     @AuraEnabled
     public static Integer countProducts(String inpTxt) {
@@ -16,8 +13,9 @@ public with sharing class AS_Community_SearchEngineController {
     }
 
     @AuraEnabled
-    public static AS_Community_Service.FirstQueryInfo getFirstQueryInfo(String inpTxt){
-        return AS_Community_Service.getFirstQueryInfo(inpTxt,3,0);
+    public static AS_Community_Service.FirstQueryInfo getFirstQueryInfo(String inpTxt) {
+        Integer queryLimit = Integer.valueOf(System.Label.AS_Community_SearchLimit);
+        return AS_Community_Service.getFirstQueryInfo(inpTxt, queryLimit, 0);
 
     }
 }
