--- a/src/classes/AS_Community_BasketItem_Controller.cls
+++ b/src/classes/AS_Community_BasketItem_Controller.cls
@@ -2,12 +2,12 @@ public with sharing class AS_Community_BasketItem_Controller {
 
     @auraEnabled
     public static void removeItemFromOrder(String productId) {
-        AS_Service.removeItemFromOrder(productId);
+        AS_Order_Service.removeItemFromOrder(productId);
     }
 
     @AuraEnabled
     public static Order getBasketOrder() {
-        return AS_Service.getBasketOrder();
+        return AS_Order_Service.getBasketOrder();
     }
 
     @AuraEnabled
